# mcp-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  MIGRATION.md  README.md  build.rs  mcp-client-config.example.json
.github/: deployment.yaml
.github/workflows/: deploy.yml
docs/: README.md
k8s/: deployment.yaml
proto/: mcp.proto
src/: config.rs  errors.rs  grpc_server.rs  lib.rs  main.rs  security_client.rs
src/api/: mod.rs  search.rs
src/connectors/: bitbucket.rs  blob_retrieval.rs  context.rs  dropbox.rs  embeddings.rs  github.rs  gitlab.rs  google_drive.rs  graph.rs  local_fs.rs  manager.rs  memory.rs  milvus_search.rs  mod.rs  notion.rs  trait_def.rs
src/context/: mod.rs  schema.rs
src/db/: mod.rs
src/infra/grpc/: clients.rs  server.rs
src/mcp/: mod.rs  server.rs
src/protocol/: server.rs  types.rs
src/search/: blob.rs  chromadb.rs  embeddings.rs  falcordb.rs  graph.rs  hybrid.rs  manager.rs  memory.rs  mod.rs  service_trait.rs
